--- a/style.css
+++ b/style.css
@@ -1,105 +1,204 @@
-/* colors and fonts */
-body {
-	background-color: rgb(230, 230, 230);
-	color: rgb(50, 50, 50);
-	font-family: 'Roboto', serif;
-	font size: 17px;
-}
+*colors and fonts*/
 
-h1, h2, {
-	font-family: 'Lora', serif;
-}
-h1 {
-	color:#823131;
-	font-size:32px;
+body {
+	background: rgb(245, 245, 245, 1.0);
+	font-size: 16px;
+	font-weight: lighter;
+	line-height: 1.6;
+	color: black;
 	
 }
-h2{
-	color:#408A92;
-	font-size:24px;
-	font-weight: lighter;
+h1, h2, body {
+	font-family: 'Roboto', sans-serif;
+	letter-spacing: 1px;
 }
+h1 {
+	color:#0C356A;
+	font-size: 32px;
+}
+
+h2 {
+	color:#279EFF;
+	font-size: 24px;		
+}
+
 a {
 	text-decoration: none;
-	color:#823131;
+	color: skyblue;
 	font-weight: bold;
 }
 a:hover {
-	color: yellow;
+	color: darkblue;
 }
 
-div {
-	background: white;
-	padding: 40px;
-	border: 1px solid black;
-	margin: 10px auto;
-	border-radius: 4px;
-	box-shadow: 0 10px 30px rgba(0,0,0.1);
-	width: 700px;
-	margin: 40 auto;
-}
+/*custom design with class*/
 
 .container {
 	width: 700px;
 	margin: 40px auto;
 }
-
 @media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
   .container {
     width: 700px;
   }
 }
 @media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
   .container {
     width: 500px;
   }
 }
 @media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
   .container {
     width: 300px;
   }
 }
 
-
-
 .card-white {
-	background-color: white;
+	background: white;
 	padding: 40px;
-	box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
+	box-shadow: 0px 10 px 30px rgba(0, 0, 0, 0.1);
 	border-radius: 4px;
-	width: 700px;
-	margin: 40px auto;
+	margin: 20px 0px;
 	text-align: center;
 }
+
 .img-circle {
 	border-radius: 50%;
 }
+
 .btn-blue {
-	background-color: #823131;
+	background: #0C356A;
 	color: white;
 	padding: 15px 20px;
 	border-radius: 4px;
 }
-.btn-blue hover {
-	background-color: yellow;
-	color: white;
+
+.btn-blue:hover {
+	color: skyblue;
 }
-.list-inline li {
-	display: inline;
+
+.list-inline {
+	list-style: none;
 	padding-left: 0px;
 }
+
 .list-inline li {
 	display: inline;
 	padding: 10px;
 }
+
 .list-inline i {
-	font-size: 50px;
-	color: #823131;
+	font-size: 30px;
+	color: skyblue;
 }
 
-.list-inline i:hover {
-	color: yellow;
+/*custom design with id*/
+
+#introduction p {
+	margin-bottom: 40px;
 }
+*colors and fonts*/
+
+body {
+	background: rgb(245, 245, 245, 1.0);
+	font-size: 16px;
+	font-weight: lighter;
+	line-height: 1.6;
+	color: black;
+	
+}
+h1, h2, body {
+	font-family: 'Roboto', sans-serif;
+	letter-spacing: 1px;
+}
+h1 {
+	color:#0C356A;
+	font-size: 32px;
+}
+
+h2 {
+	color:#279EFF;
+	font-size: 24px;		
+}
+
+a {
+	text-decoration: none;
+	color: skyblue;
+	font-weight: bold;
+}
+a:hover {
+	color: darkblue;
+}
+
+/*custom design with class*/
+
+.container {
+	width: 700px;
+	margin: 40px auto;
+}
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+  .container {
+    width: 700px;
+  }
+}
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .container {
+    width: 500px;
+  }
+}
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 300px;
+  }
+}
+
+.card-white {
+	background: white;
+	padding: 40px;
+	box-shadow: 0px 10 px 30px rgba(0, 0, 0, 0.1);
+	border-radius: 4px;
+	margin: 20px 0px;
+	text-align: center;
+}
+
+.img-circle {
+	border-radius: 50%;
+}
+
+.btn-blue {
+	background: #0C356A;
+	color: white;
+	padding: 15px 20px;
+	border-radius: 4px;
+}
+
+.btn-blue:hover {
+	color: skyblue;
+}
+
+.list-inline {
+	list-style: none;
+	padding-left: 0px;
+}
+
+.list-inline li {
+	display: inline;
+	padding: 10px;
+}
+
+.list-inline i {
+	font-size: 30px;
+	color: skyblue;
+}
+
+/*custom design with id*/
+
 #introduction p {
 	margin-bottom: 40px;
 }
